--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
 	},
 	"author": "Jiaqi Zheng",
 	"description": "do something",
-	"keywords":["freecodecamp", "solution"]
+	"keywords": ["freecodecamp", "solution"],
+	"liscense": "MIT"
 }
