task four typo ifx

--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
 	"author": "Jiaqi Zheng",
 	"description": "do something",
 	"keywords": ["freecodecamp", "solution"],
-	"liscense": "MIT"
+	"license": "MIT"
 }
