--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
@@ -15,5 +16,5 @@
 	"description": "do something",
 	"keywords": ["freecodecamp", "solution"],
 	"license": "MIT",
-	"version": "1.2.0"
+	"version": "1.2.0",
 }
